12-kubernetes/1.8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      port: 443         # Порт, который будет слушать сервис
      targetPort: 443   # Порт внутри пода nginx
